# libs

./: .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  Cargo.toml  LICENSE  bun.lockb  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  turbo.json
crates/js-listener/: Cargo.toml  LICENSE  README.md
crates/js-listener/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  property.rs  search.rs  session_manager.rs  text_range.rs  timer.rs  transaction.rs  undo.rs  vertex.rs
crates/model/src/db/client/: firestore_js.rs  mod.rs
crates/model/src/entity/: mod.rs
crates/model/src/property/content/: content_type.rs  data_chunks.rs  mod.rs  text.rs  text_range_offset.rs
crates/model/src/transaction/: batch.rs  store.rs  transaction_native.rs  utils.rs
crates/model/src/utils/: helpers.rs
crates/model/tests/: yrs-basics.rs  yrs-busyloop.rs
crates/plm-interfaces/: Cargo.toml
crates/plm-interfaces/src/: lib.rs  observable.rs
crates/render/: Cargo.toml
crates/render/examples/positioned/: main.rs
crates/render/examples/radial-nav/: main.rs
crates/render/shaders/: positioned.wgsl  radial_nav.wgsl
crates/render/src/: app_controller.rs  context.rs  lib.rs  svg.rs  wgpu_renderer.rs
crates/render/src/model/: mod.rs  null.rs  position.rs  position_color.rs  quad.rs
crates/render/src/modules/: mod.rs  positioned.rs  sentinel.rs  wgpu_render_module.rs
crates/render/src/shape/: frame.rs  mod.rs  rectangle.rs  selection_box.rs
crates/render/src/util/: animator.rs  border.rs  depth_mask.rs  math.rs  mod.rs  path.rs  types.rs
crates/render/src/viewmodel/: arrow.rs  implicit_relation_blob.rs  mod.rs  selection_box.rs
crates/render/src/viewmodel/radial_nav/: button.rs  mod.rs  radial_nav.rs  tooltip.rs
crates/test-wrap-gen/: Cargo.toml
crates/test-wrap-gen/src/: main.rs
crates/test-wrap-gen/tests/: foo.ts
crates/viewmodel/: Cargo.toml
crates/viewmodel/benches/: fdg_benchmark.rs
crates/viewmodel/examples/: plot.rs  plot1.rs  plot2.rs  plot3.rs  plot4.rs  plot5.rs
crates/viewmodel/src/node/: load_state.rs  mod.rs  text_field.rs  ts_wrapper.rs  view_model_node.rs  walk.rs
crates/viewmodel/src/node/text_field/: item.rs
crates/viewmodel/src/util/: boundingbox.rs  mod.rs  rc_ref.rs
crates/viewmodel/src/util/fdg/: graph.rs  member.rs  mod.rs
crates/viewmodel/src/util/geometry/: mod.rs  vector.rs
crates/viewmodel/src/util/traversal/: dom_node_wrapper.rs  mod.rs  test_support.rs  vm_node_wrapper.rs
crates/viewmodel/tests/: fdg.rs
crates/viewmodel/tests/fdg_cases/: four_cards.rs  mod.rs  three_cards.rs  two_cards.rs
eslint-plugin-edvo/: package.json
eslint-plugin-edvo/lib/: index.js
