[package]
name = "edvo-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation.workspace = true
yrs.workspace = true

wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-test = "0.3.34"
log = "0.4.6"
#observable-rs = { path = "../../../observable-rs/crates/observable" }
#observable-react = { path = "../../../observable-rs/crates/react" }
observable-rs = { git = "https://github.com/kranfix/observable-rs.git", rev = "cb60ee2f6d97a8f65f058ca2eeb404295b6f1f28" }
observable-react = { git = "https://github.com/kranfix/observable-rs.git", rev = "cb60ee2f6d97a8f65f058ca2eeb404295b6f1f28" }
js-sys = "0.3.59"
futures-timer = "3.0.2"
serde = { version = "1.0.105", features = ["derive"] }
futures = "0.3.23"
similar = "2.2.0"
undo_2 = "0.2.0"
async-trait = "0.1.73"
regex = "1.10.3"
once_cell = "1.19"
url = "2.5.2"
hex = "0.4.3"
sha2 = "0.9.5"

[dev-dependencies]
tokio = { version = "^1.35", features = ["macros", "rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
firebase-auth-sdk = { git = "https://github.com/edvoapp/firebase-auth-sdk.git", tag = "v0.2.0-rc.1" }
gcloud-sdk = "0.20.4"
firestore = "0.32.2"
